--- a/style.css
+++ b/style.css
@@ -1,13 +1,5 @@
+html,
 body {
-  margin: 0;
-  padding: 0;
-  color: #777;
-  font-size: 16px;
-  font-family: "Helvetica", arial;
-  -webkit-font-smoothing: antialiased;
-}
-
-html, body {
   width: 100%;
   height: 100%;
 }
@@ -15,9 +7,7 @@ html, body {
 #viewport {
   width: 100%;
   height: 100%;
-  -webkit-perspective: 500px;
   perspective: 500px;
-  -webkit-perspective-origin: 50% 50%;
   perspective-origin: 50% 50%;
   background: #eee;
 }
@@ -31,68 +21,46 @@ html, body {
   margin-left: -200px;
   margin-top: -200px;
   background: #777;
-  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  -webkit-transform: translateZ(-200px) rotateX(0deg);
-  -moz-transform: translateZ(-200px) rotateX(0deg);
-  -ms-transform: translateZ(-200px) rotateX(0deg);
+  transition: transform 0.4s;
   transform: translateZ(-200px) rotateX(0deg);
-  -webkit-transform-origin: 0 0 0;
-  transform-origin: 0 0 0;
 }
 
 #cube > div {
-  background: blue;
-  border: 1px solid red;
   width: 400px;
   height: 400px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: absolute;
-  opacity: 0.7;
+}
+
+#cube.right {
+  transform: translateZ(-200px) rotateY(-90deg);
+}
+
+#cube.back {
+  transform: translateZ(-200px) rotateY(-180deg);
 }
 
 #front {
-  -webkit-transform: translateZ(200px);
-  -moz-transform: translateZ(200px);
-  -ms-transform: translateZ(200px);
   transform: translateZ(200px);
 }
 
 #back {
-  -webkit-transform: translateZ(-200px);
-  -moz-transform: translateZ(-200px);
-  -ms-transform: translateZ(-200px);
   transform: translateZ(-200px);
 }
 
 #left {
-  -webkit-transform: translateX(-200px) rotateY(90deg);
-  -moz-transform: translateX(-200px) rotateY(90deg);
-  -ms-transform: translateX(-200px) rotateY(90deg);
   transform: translateX(-200px) rotateY(90deg);
 }
 
 #right {
-  -webkit-transform: translateX(200px) rotateY(90deg);
-  -moz-transform: translateX(200px) rotateY(90deg);
-  -ms-transform: translateX(200px) rotateY(90deg);
   transform: translateX(200px) rotateY(90deg);
 }
 
 #top {
-  -webkit-transform: translateY(-200px) rotateX(90deg);
-  -moz-transform: translateY(-200px) rotateX(90deg);
-  -ms-transform: translateY(-200px) rotateX(90deg);
   transform: translateY(-200px) rotateX(90deg);
 }
 
 #bottom {
-  -webkit-transform: translateY(200px) rotateX(90deg);
-  -moz-transform: translateY(200px) rotateX(90deg);
-  -ms-transform: translateY(200px) rotateX(90deg);
   transform: translateY(200px) rotateX(90deg);
 }
-
-/*# sourceMappingURL=Lesson09.css.map */
