--- a/style.css
+++ b/style.css
@@ -41,16 +41,24 @@ body {
   transform: translateZ(-200px) rotateY(-180deg);
 }
 
+#cube.left {
+  transform: translateZ(-200px) rotateY(-270deg);
+}
+
+#cube.top {
+  transform: translateZ(-200px) rotateY(-270deg) rotateZ(-90deg);
+}
+
 #front {
   transform: translateZ(200px);
 }
 
 #back {
-  transform: translateZ(-200px);
+  transform: translateZ(-200px) rotateY(180deg);
 }
 
 #left {
-  transform: translateX(-200px) rotateY(90deg);
+  transform: translateX(-200px) rotateY(-90deg);
 }
 
 #right {
@@ -58,7 +66,7 @@ body {
 }
 
 #top {
-  transform: translateY(-200px) rotateX(90deg);
+  transform: translateY(-200px) rotateX(90deg) rotateZ(90deg);
 }
 
 #bottom {
